2007-09-20  Akim Demaille  <demaille@gostai.com>

	= is sugar for setSlot
	We need updateSlot, but this implements exactly the (incorrect)
	semantics we have until now.
	* src/ast/ast.yml, src/runner/runner.hh, src/runner/runner.cc
	(Assign): remove.
	* src/object/object-class.cc (object_class_updateSlot): New.
	(object_class_setSlot): Return the pseudo rhs.
	* src/parser/bison/ugrammar.y (call): Yet another one, with 2 args.
	(assign): New.
	Use it to replace ast::Assign.

2007-09-20  Akim Demaille  <demaille@gostai.com>

	while
	* src/ast/ast.yml: Remove dead comments.
	(While): New.
	* src/parser/bison/ugrammar.y: Use it.
	* src/object/object.hh (IS_TRUE): New.
	* src/runner/runner.hh, src/runner/runner.cc (If): Use IS_TRUE.
	Remove spurious YIELD.
	(While): New.

2007-09-20  Akim Demaille  <demaille@gostai.com>

	Function arity, echo & print
	* src/object/code-class.cc (code_class_echo): Remove, it is
	unclear why it was there, not to mention that it subscribed itself
	in context_class, not code_class.
	So move it to...
	* src/object/object-class.cc (object_class_echo): here.
	Reimplement using...
	(object_class_print): this.
	Reimplement it to issue the pretty-printed output, not the detailed
	debug output.

	* src/object/urbi-exception.cc: Simplify error msg..
	* src/object/urbi-exception.hh, src/object/urbi-exception.hxx
	(check_arg_count): New.
	* src/object/primitives.hh: Use it.
	* src/runner/runner.cc: Ditto.

	* tests-local.mk: All the k2 tests pass.

2007-09-20  Akim Demaille  <demaille@gostai.com>

	Even more debugging
	* src/runner/runner.cc, src/runner/runner.hxx: More
	ECHOs.
	Simplify a couple of ones.

2007-09-20  Akim Demaille  <demaille@gostai.com>

	String::+
	* src/object/object.hh (VALUE): New.
	Bad name, agreed.  Please, make it clearer.
	* src/object/float-class.cc: Use it.
	* src/object/primitives.hh: Ditto.
	* src/object/string-class.cc (PRIMITIVE_OP_STRING): Don't work
	on symbols, but on std::string.
	(String::add): New.
