@@ -1,8 +1,7 @@
 #!/usr/bin/env python
 
-import re
-import sys, os, os.path, filecmp, shutil, stat
-import ast, tools
+import re, sys
+import ast, tools, ast_params
 
 if len(sys.argv) != 2:
   tools.error("Usage: .. SRCDIR")
@@ -26,10 +25,6 @@ print tools.banner("ast/pretty-printer.hh",
 # define AST_PRETTY_PRINTER_HH
 
 # include <iosfwd>
-
-# include "libport/indent.hh"
-# include "libport/pair.hh"
-# include "libport/separator.hh"
 
 # include "ast/default-visitor.hh"
 
@@ -130,11 +125,10 @@ sys.stdout = visitor_cc
 print tools.banner("ast/pretty-printer.cc",
 		   "Implementation of ast::PrettyPrinter.") + """
 #include <ostream>
-#include <boost/foreach.hpp>
-#define foreach BOOST_FOREACH
+
 #include "pretty-printer.hh"
 #include "all.hh"
-
+""" + ast_params.printer_cc_prologue + """
 namespace ast
 {
 """
@@ -170,7 +164,8 @@ for node in arr:
       else:
 	action += '    ostr_ << %s;\n' % (a)
     print """\
-  void PrettyPrinter::operator() (const %s& n)
+  void 
+  PrettyPrinter::operator() (const %s& n)
   {
     // Don't warn about unused arguments.
     (void) n;
